# reqwest-eventsource

./: Cargo.toml  README.md
examples/: server.rs  simple.rs  wait.rs
src/: error.rs  event_source.rs  lib.rs  reqwest_ext.rs  retry.rs
