[package]
name = "reqwest-eventsource"
version = "0.1.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jpopesculian/reqwest-eventsource"
documentation = "https://docs.rs/reqwest-eventsource/"
repository = "https://github.com/jpopesculian/reqwest-eventsource"
description = "Helper to build an Eventsource using reqwest"
keywords = ["sse", "eventsource", "reqwest", "stream", "event"]
categories = ["web-programming::http-client", "no-std", "parsing", "asynchronous"]

[dependencies]
eventsource-stream = "0.1.0"
reqwest = { version = "0.10.6", default-features = false, features = ["stream"] }
futures-core = "0.3.5"

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["macros"] }
futures-retry = "0.5.0"
